--- a/package.json
+++ b/package.json
@@ -20,7 +20,12 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@auth0/angular-jwt": "^2.0.0",
+    "angular-jwt": "^0.1.10",
+    "angular2-flash-messages": "^3.0.1",
+    "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "ngx-toastr": "^9.0.2",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
   },
